[gd_scene load_steps=14 format=2]

[ext_resource path="res://FireFighters/FireFighter.gd" type="Script" id=1]
[ext_resource path="res://assets/bomberoSinCara.png" type="Texture" id=2]
[ext_resource path="res://assets/caraBombero.png" type="Texture" id=3]
[ext_resource path="res://assets/mascara.png" type="Texture" id=4]
[ext_resource path="res://assets/llave.png" type="Texture" id=5]
[ext_resource path="res://gun/gun1.png" type="Texture" id=6]
[ext_resource path="res://FireFighters/AreaPlayer.gd" type="Script" id=7]
[ext_resource path="res://Matafuego.tscn" type="PackedScene" id=8]
[ext_resource path="res://sonido.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.2078, 29.8271 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.2199, 29.4549 )

[sub_resource type="Animation" id=3]
resource_name = "caminar"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CuerpoBombero:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.238261, 0.206228 ), Vector2( 0.2, 0.27 ), Vector2( 0.25, 0.2 ), Vector2( 0.238261, 0.206228 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CaraBombero:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.238, 0.206 ), Vector2( 0.2, 0.27 ), Vector2( 0.25, 0.2 ), Vector2( 0.238, 0.206 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 8.34148, 4.57294 )
collision_layer = 2
script = ExtResource( 1 )

[node name="CuerpoBombero" type="Sprite" parent="."]
position = Vector2( -9.39547, -10.1963 )
scale = Vector2( 0.245212, 0.20254 )
texture = ExtResource( 2 )

[node name="CuerpoBombero2" type="Sprite" parent="."]
visible = false
modulate = Color( 0.309804, 0.14902, 0.133333, 1 )
position = Vector2( -9.39547, -10.1963 )
scale = Vector2( 0.245212, 0.20254 )
texture = ExtResource( 2 )

[node name="CaraBombero2" type="Sprite" parent="."]
visible = false
modulate = Color( 0.309804, 0.14902, 0.133333, 1 )
position = Vector2( -9.24346, -22.256 )
scale = Vector2( 0.245106, 0.202447 )
texture = ExtResource( 3 )

[node name="CaraBombero" type="Sprite" parent="."]
position = Vector2( -9.24346, -19.8837 )
scale = Vector2( 0.253713, 0.22262 )
texture = ExtResource( 3 )

[node name="mascara" type="Sprite" parent="."]
position = Vector2( -8.98864, -18.079 )
scale = Vector2( 0.0316004, 0.0455103 )
texture = ExtResource( 4 )
region_enabled = true

[node name="llave" type="Sprite" parent="."]
position = Vector2( -16.6949, 3.24742 )
scale = Vector2( 0.0199968, 0.0228803 )
texture = ExtResource( 5 )
region_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -9.56946, -9.57295 )
shape = SubResource( 1 )

[node name="Hose" type="Sprite" parent="."]
editor/display_folded = true
scale = Vector2( 1, 0.5 )
texture = ExtResource( 6 )
offset = Vector2( 10, 0 )

[node name="Muzzle" type="Position2D" parent="Hose"]
position = Vector2( 25, 0 )

[node name="GunTimer" type="Timer" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 20, 0 )
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 5
collide_with_areas = true

[node name="AreaPlayer" type="Area2D" parent="."]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaPlayer"]
position = Vector2( -9.58151, -9.68166 )
shape = SubResource( 2 )

[node name="EnvTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Matafuego" parent="." instance=ExtResource( 8 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "caminar"
anims/caminar = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="sonido" parent="." instance=ExtResource( 9 )]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="area_entered" from="AreaPlayer" to="AreaPlayer" method="_on_AreaPlayer_area_entered"]
[connection signal="timeout" from="EnvTimer" to="." method="_on_EnvTimer_timeout"]
[connection signal="timeout" from="EnvTimer" to="." method="_on_EnvTimer2_timeout"]
